--- a/module-apps/application-messages/CMakeLists.txt
+++ b/module-apps/application-messages/CMakeLists.txt
@@ -13,17 +13,16 @@ include_directories( ${PROJECT_NAME}
 target_sources( ${PROJECT_NAME}
 
 	PRIVATE
+		"${CMAKE_CURRENT_LIST_DIR}/data/MessagesSwitchData.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/ApplicationMessages.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/ThreadsModel.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/ThreadItem.cpp"
-		#"${CMAKE_CURRENT_LIST_DIR}/widgets/MessagesListView.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/windows/MessagesMainWindow.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/windows/ThreadViewWindow.cpp"
 	PUBLIC
+		"${CMAKE_CURRENT_LIST_DIR}/data/MessagesSwitchData.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/ThreadsModel.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/ApplicationMessages.hpp"
-		#"${CMAKE_CURRENT_LIST_DIR}/widgets/MessagesListView.hpp"
-		"${CMAKE_CURRENT_LIST_DIR}/widgets/Threadtem.hpp"
-        #"${CMAKE_CURRENT_LIST_DIR}/windows/MessagesNewContact.hpp"
+		"${CMAKE_CURRENT_LIST_DIR}/widgets/ThreadItem.hpp"
 )
 
