--- a/module-apps/application-messages/CMakeLists.txt
+++ b/module-apps/application-messages/CMakeLists.txt
@@ -16,13 +16,17 @@ target_sources( ${PROJECT_NAME}
 		"${CMAKE_CURRENT_LIST_DIR}/data/MessagesSwitchData.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/ApplicationMessages.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/ThreadsModel.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/MessagesModel.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/ThreadItem.cpp"
+		"${CMAKE_CURRENT_LIST_DIR}/widgets/MessageItem.cpp"
 		"${CMAKE_CURRENT_LIST_DIR}/windows/MessagesMainWindow.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/windows/ThreadViewWindow.cpp"
 	PUBLIC
 		"${CMAKE_CURRENT_LIST_DIR}/data/MessagesSwitchData.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/ThreadsModel.hpp"
+		"${CMAKE_CURRENT_LIST_DIR}/MessagesModel.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/ApplicationMessages.hpp"
 		"${CMAKE_CURRENT_LIST_DIR}/widgets/ThreadItem.hpp"
+		"${CMAKE_CURRENT_LIST_DIR}/widgets/MessageItem.hpp"
 )
 
