--- a/module-vfs/CMakeLists.txt
+++ b/module-vfs/CMakeLists.txt
@@ -40,8 +40,7 @@ target_include_directories(${PROJECT_NAME}
         PUBLIC
 
         ${CMAKE_CURRENT_SOURCE_DIR}
-
-
+	${CMAKE_BINARY_DIR}
 )
 
 target_compile_options(${PROJECT_NAME}
