--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,11 +44,11 @@ if (${PROJECT_TARGET} STREQUAL "TARGET_Linux")
     set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
     set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -ggdb3 -DNDEBUG")
 else()
-    set(CMAKE_C_FLAGS_DEBUG "-ggdb3 -DDEBUG")
+    set(CMAKE_C_FLAGS_DEBUG "-ggdb3 -Og -DDEBUG")
     set(CMAKE_C_FLAGS_RELEASE "-O2 -DNDEBUG")
     set(CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -ggdb3 -DNDEBUG")
 
-    set(CMAKE_CXX_FLAGS_DEBUG "-ggdb3 -DDEBUG")
+    set(CMAKE_CXX_FLAGS_DEBUG "-ggdb3 -Og -DDEBUG")
     set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
     set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -ggdb3 -DNDEBUG")
 
