[EGD-3502] reworked endpoints and handlers added endpoint listener to query

--- a/module-services/service-desktop/endpoints/CMakeLists.txt
+++ b/module-services/service-desktop/endpoints/CMakeLists.txt
@@ -3,6 +3,8 @@ target_include_directories(${PROJECT_NAME}
 		"${CMAKE_CURRENT_LIST_DIR}"
 		"${CMAKE_CURRENT_LIST_DIR}/.."
 		"${CMAKE_CURRENT_LIST_DIR}/../messages"
+		"${CMAKE_CURRENT_LIST_DIR}/messages"
+		"${CMAKE_CURRENT_LIST_DIR}/contacts"
 )
 target_include_directories(${CMAKE_PROJECT_NAME}
     PUBLIC
@@ -12,10 +14,13 @@ target_include_directories(${CMAKE_PROJECT_NAME}
 target_sources(${PROJECT_NAME}
 	PRIVATE
 		"DeviceInfo.cpp"
-		"Update.cpp"
-		"Backup.cpp"
-		"Restore.cpp"
-		"Factory.cpp"
-		"Contacts.cpp"
-		"Messages.cpp"
+		/*"Update.cpp"*/
+		/*"Backup.cpp"*/
+		/*"Restore.cpp"*/
+		/*"Factory.cpp"*/
+		"contacts/ContactHelper.cpp"
+		"contacts/ContactsEndpoint.cpp"
+		"messages/MessageHelper.cpp"
+		"messages/MessagesEndpoint.cpp"
+
 )
