[EGD-3522] added ContactUpdate query

--- a/module-db/CMakeLists.txt
+++ b/module-db/CMakeLists.txt
@@ -73,6 +73,7 @@ set(SOURCES
         queries/phonebook/QueryContactGet.cpp
         queries/phonebook/QueryContactGetByID.cpp
         queries/phonebook/QueryContactAdd.cpp
+        queries/phonebook/QueryContactUpdate.cpp
         queries/calendar/QueryEventsRemove.cpp
         queries/calendar/QueryEventsGet.cpp
         queries/calendar/QueryEventsGetAll.cpp
