--- a/module-db/CMakeLists.txt
+++ b/module-db/CMakeLists.txt
@@ -71,6 +71,7 @@ set(SOURCES
         queries/sms/QuerySMSTemplateGetByID.cpp
         queries/sms/QuerySMSTemplateGet.cpp
         queries/sms/QuerySMSTemplateGetCount.cpp
+        queries/sms/QuerySMSTemplateRemove.cpp
         queries/calllog/QueryCalllogSetAllRead.cpp
         queries/notifications/QueryNotificationsGet.cpp
         queries/notifications/QueryNotificationsIncrement.cpp
