--- a/module-apps/application-music-player/CMakeLists.txt
+++ b/module-apps/application-music-player/CMakeLists.txt
@@ -1,25 +1,20 @@
 
 include_directories( ${CMAKE_PROJECT_NAME}
 
-	PUBLIC
-		"${CMAKE_CURRENT_LIST_DIR}"
-)
-
-include_directories( ${PROJECT_NAME}
-
-	PUBLIC
-		"${CMAKE_CURRENT_LIST_DIR}"
+    PUBLIC
+        "${CMAKE_CURRENT_LIST_DIR}"
 )
 
 target_sources( ${PROJECT_NAME}
 
-	PRIVATE
-		"${CMAKE_CURRENT_LIST_DIR}/ApplicationMusicPlayer.cpp"
-		"${CMAKE_CURRENT_LIST_DIR}/windows/MusicPlayerMainWindow.cpp"
-		"${CMAKE_CURRENT_LIST_DIR}/widgets/SongItem.cpp"
-		"${CMAKE_CURRENT_LIST_DIR}/models/SongsModel.cpp"
-	PUBLIC
-		"${CMAKE_CURRENT_LIST_DIR}/ApplicationMusicPlayer.hpp"
-		"${CMAKE_CURRENT_LIST_DIR}/widgets/SongItem.hpp"
-		"${CMAKE_CURRENT_LIST_DIR}/windows/MusicPlayerMainWindow.hpp"
+    PRIVATE
+        "${CMAKE_CURRENT_LIST_DIR}/ApplicationMusicPlayer.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/windows/MusicPlayerAllSongsWindow.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/windows/MusicPlayerEmptyWindow.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/widgets/SongItem.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/widgets/Action.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/models/SongsModel.cpp"
+        
+    PUBLIC
+        "${CMAKE_CURRENT_LIST_DIR}/ApplicationMusicPlayer.hpp"
 )
