--- a/module-gui/gui/widgets/CMakeLists.txt
+++ b/module-gui/gui/widgets/CMakeLists.txt
@@ -4,9 +4,9 @@ target_sources( ${PROJECT_NAME}
         "${CMAKE_CURRENT_LIST_DIR}/Alignment.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/BottomBar.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/CheckBox.cpp"
-		"${CMAKE_CURRENT_LIST_DIR}/Icon.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/Icon.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Image.cpp"
-		"${CMAKE_CURRENT_LIST_DIR}/ImageBox.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/ImageBox.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Item.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/Label.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/ListItem.cpp"
@@ -34,13 +34,16 @@ target_sources( ${PROJECT_NAME}
         "${CMAKE_CURRENT_LIST_DIR}/Style.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/InputMode.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/GridLayout.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/Lines.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/TextLineCursor.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/RichTextParser.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/TextFormat.cpp"
     PUBLIC
         "${CMAKE_CURRENT_LIST_DIR}/Alignment.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/BottomBar.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/Image.hpp"
-		"${CMAKE_CURRENT_LIST_DIR}/ImageBox.hpp"
+        "${CMAKE_CURRENT_LIST_DIR}/ImageBox.hpp"
+        "${CMAKE_CURRENT_LIST_DIR}/TextFixedSize.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/Item.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/Label.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/ListItem.hpp"
@@ -56,5 +59,7 @@ target_sources( ${PROJECT_NAME}
         "${CMAKE_CURRENT_LIST_DIR}/Layout.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/TopBar.hpp"
         "${CMAKE_CURRENT_LIST_DIR}/Text.hpp"
+        "${CMAKE_CURRENT_LIST_DIR}/Lines.hpp"
+        "${CMAKE_CURRENT_LIST_DIR}/TextLineCursor.hpp"
 )
 
