EGD-2955 EGD-3588 Timers fully refactored & updated
* Timers now are Application thread safe
* Timers now have consistent API independend of Application (no more c style timers)
* Timers can have either: callback or override onTimer() method - this
  way we can create more complicated timers or just use existing ones
* gui::Timer added via adapter class GuiTimer to decouple sys::Timer
  with gui::Timer

--- a/module-apps/CMakeLists.txt
+++ b/module-apps/CMakeLists.txt
@@ -13,6 +13,7 @@ endif()
 
 set( SOURCES 
     "Application.cpp"
+    "GuiTimer.cpp"
     "UiCommonActions.cpp" 
     "windows/AppWindow.cpp" 
     "windows/OptionWindow.cpp"
