--- a/module-apps/application-settings/CMakeLists.txt
+++ b/module-apps/application-settings/CMakeLists.txt
@@ -18,6 +18,7 @@ target_sources( ${PROJECT_NAME}
         windows/SettingsMainWindow.cpp
         windows/LanguageWindow.cpp
         windows/BtWindow.cpp
+        windows/BtScanWindow.cpp
 
         windows/UITestWindow.cpp
         windows/Info.cpp
