EGD-2955_EGD-3588 fixed touched headers with iwyu
Application.hpp
Service.cpp
Item.hpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,7 @@ add_compile_options( ${TARGET_COMPILE_OPTIONS}
                      -MP
                      -fno-builtin
                      # warning flags
+                     -fno-diagnostics-color
                      -Wall -Wextra -Werror -Wno-unused-parameter)
 
 target_compile_features(${PROJECT_NAME} PUBLIC
