--- a/module-apps/CMakeLists.txt
+++ b/module-apps/CMakeLists.txt
@@ -15,6 +15,7 @@ set( SOURCES
     "Application.cpp"
     "GuiTimer.cpp"
     "UiCommonActions.cpp" 
+    "WindowsStore.cpp" 
     "windows/AppWindow.cpp" 
     "windows/OptionWindow.cpp"
     "windows/Options.cpp" 
