WindowsStore renamed to WindowsFactory - Store needs to be splitted toavoid antipattern

--- a/module-apps/CMakeLists.txt
+++ b/module-apps/CMakeLists.txt
@@ -15,7 +15,7 @@ set( SOURCES
     "Application.cpp"
     "GuiTimer.cpp"
     "UiCommonActions.cpp" 
-    "WindowsStore.cpp" 
+    "WindowsFactory.cpp" 
     "windows/AppWindow.cpp" 
     "windows/OptionWindow.cpp"
     "windows/Options.cpp" 
