[EGD-3789] OptionSetting intoduced as a base to handle settings windows

--- a/module-apps/CMakeLists.txt
+++ b/module-apps/CMakeLists.txt
@@ -20,6 +20,7 @@ set( SOURCES
     "windows/Dialog.cpp" 
     "windows/NoEvents.cpp"
     "widgets/SearchBox.cpp"
+    "windows/OptionSetting.cpp"
     )
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES} ${BOARD_SOURCES})
