--- a/.gitmodules
+++ b/.gitmodules
@@ -59,3 +59,6 @@
 [submodule "module-utils/tinyexpr"]
 	path = module-utils/tinyexpr
 	url = https://github.com/codeplea/tinyexpr.git
+[submodule "module-bsp/board/rt1051/bsp/usb"]
+	path = module-bsp/board/rt1051/bsp/usb
+	url = git@github.com:mudita/usb_stack.git
