[EGD-3763] usb driver integration - usb CDC is active - usb MTP is active - uploading update file is implemented - test app for ServiceDesktop is https://github.com/mudita/PureNode (electron) - during the update process live update messages are sent to desktop to inform about the status of the update - error codes are reported - developer endpoint is enabled (reboot,reset)

--- a/.gitmodules
+++ b/.gitmodules
@@ -62,3 +62,4 @@
 [submodule "module-bsp/board/rt1051/bsp/usb"]
 	path = module-bsp/board/rt1051/bsp/usb
 	url = git@github.com:mudita/usb_stack.git
+	branch = muditaos
