EGD-3585 Started adding tests

--- a/module-services/service-gui/CMakeLists.txt
+++ b/module-services/service-gui/CMakeLists.txt
@@ -25,3 +25,6 @@ target_include_directories(${PROJECT_NAME}
         "${CMAKE_CURRENT_LIST_DIR}/messages"
 )
 
+if (${ENABLE_TESTS})
+    add_subdirectory(source/tests)
+endif ()
