--- a/module-services/service-evtmgr/CMakeLists.txt
+++ b/module-services/service-evtmgr/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SOURCES
         alarm/EventManagerAlarm.cpp
         api/EventManagerServiceAPI.cpp
         messages/Message.cpp
+        LightControl.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
