EGD-5343 Added s flag to pytest to show logs
We are not able to view logs from tests because pytest catches stdout

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,7 +92,7 @@ jobs:
           ./run_emulator_on_filesystem_image.sh 2>&1 > emulator.log &
           echo $! > emulator.pid
       - name: run tests
-        run: pytest ./pytest -rP --port=simulator --timeout=20 -m 'not rt1051'
+        run: pytest ./pytest -rP --port=simulator --timeout=20 -m 'not rt1051' -s
         working-directory: test
       - name: kill emulator
         run: |
