[EGD-5317] Module-db UT solved
Vfs init.
Convertion time string to unix time returns 1 hour later than should.
DatabaseInitializer stub that just creates empty dbs with table structure but without data.
notification table initial records moved to Database Initilize section.
UT run with a stub of Database Initialize - new test section introduced to test original initializer: test-initializer.
Added missing data for contacts db to run the sorted list test and test fix.

--- a/module-db/tests/CMakeLists.txt
+++ b/module-db/tests/CMakeLists.txt
@@ -6,31 +6,31 @@ add_catch2_executable(
     NAME
         db
     SRCS
-        "${CMAKE_CURRENT_SOURCE_DIR}/unittest.cpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/tests-main.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/SMSTable_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/ThreadsTable_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/ContactsTable_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/ContactsNameTable_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/ContactsNumberTable_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/ContactsRingtonesTable_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/ContactsAddressTable_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/ContactGroups_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/DbInitializer.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/SMSTable_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/ThreadsTable_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/ContactsTable_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/ContactsNameTable_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/ContactsNumberTable_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/ContactsRingtonesTable_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/ContactsAddressTable_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/ContactGroups_tests.cpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/AlarmsTable_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/SMSTemplateTable_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/CalllogTable_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/NotificationsTable_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/EventsTable_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/SMSTemplateTable_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/CalllogTable_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/NotificationsTable_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/EventsTable_tests.cpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/NotesRecord_tests.cpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/NotesTable_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/CalllogRecord_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/ContactsRecord_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/SMSRecord_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/ThreadRecord_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/CalllogRecord_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/ContactsRecord_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/SMSRecord_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/ThreadRecord_tests.cpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/AlarmsRecord_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/SMSTemplateRecord_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/NotificationsRecord_tests.cpp"
-        #"${CMAKE_CURRENT_SOURCE_DIR}/EventsRecord_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/SMSTemplateRecord_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/NotificationsRecord_tests.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/EventsRecord_tests.cpp"
         "${CMAKE_CURRENT_SOURCE_DIR}/QueryInterface.cpp"
         
     LIBS
@@ -40,3 +40,4 @@ add_catch2_executable(
     DEPS
         PurePhone.img-target
 )
+add_subdirectory(test-initializer)
