MeditationAnalisis Added DOM message

--- a/module-services/service-desktop/CMakeLists.txt
+++ b/module-services/service-desktop/CMakeLists.txt
@@ -28,6 +28,7 @@ set(SOURCES
     parser/ParserFSM.cpp
     parser/MessageHandler.cpp
 
+    DeveloperModeMessage.cpp
     DesktopMessages.cpp
     ServiceDesktop.cpp
     WorkerDesktop.cpp
