--- a/module-apps/CMakeLists.txt
+++ b/module-apps/CMakeLists.txt
@@ -14,6 +14,7 @@ endif()
 set( SOURCES 
     "Application.cpp"
     "GuiTimer.cpp"
+    "DOMResponder.cpp"
     "WindowsFactory.cpp"
     "TopBarManager.cpp"
     "AsyncTask.cpp"
